--- a/client/test.html
+++ b/client/test.html
@@ -11,6 +11,7 @@
 
     <body>
         <h1>BuyOrDie charactor move test</h1>
+        <div id="state">Waiting</div>
         <button onclick="moving()">move test</button>
         <button onclick="stop()">stop moving</button>
         <div id="timer" style="text-align: center;font-size: 100px;margin-top: 100px;">timer</div>
