--- a/client/test.html
+++ b/client/test.html
@@ -15,6 +15,7 @@
 
     <body>
         <h1>BuyOrDie charactor move test</h1>
+        <div id="role"></div>
         <div id="state">Waiting</div>
         <button onclick="moving()">move test</button>
         <button onclick="stop()">stop moving</button>
