修改 playerHit傳kill時目標錯誤問題 修改 玩家死掉時機制改成，先把手清空，重生時再發條碼機到手上 修改 擊殺的檢查時效改為100ms(0.1秒) 新增 本地端網頁左右手擊發功能 修改 拿掉幾個本地端網頁聆聽時的console.log

--- a/client/test.html
+++ b/client/test.html
@@ -28,6 +28,10 @@
         <button onclick="adHit()" style="float: left;">hit ad</button>
         <button onclick="fireRight()" style="float: left;">fire right hand</button>
         <button onclick="fireLeft()" style="float: left;">fire left hand</button>
+        <button onclick="pressLeft()" style="float: left;">press left</button>
+        <button onclick="pressRight()" style="float: left;">press right</button>
+        <button onclick="releaseLeft()" style="float: left;">release left</button>
+        <button onclick="releaseRight()" style="float: left;">release right</button>
         <div style="clear: both;"></div>
         <div id="timer" style="font-size: 100px; margin: 100px; float: left;">timer</div>
         <div id="wallpaper" style="line-height: 30px;">
